--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna Recipe</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="recipes/Corn-ribs.html">Corn ribs</a></li>
+            <li><a href="recipes/pasta-salad.html">Pasta Salad</a></li>
+        </ul>
     </body>
 </html>
